# yap-geos

./: CMakeLists.txt  README.md  common.h  geometry_to_term.c  geometry_to_term.h  geos.yap  geos_yap.c  geos_yap.h  macros.h  opaque.yap  sanity.yap  term_to_geometry.c  term_to_geometry.h  yap.c  yap.h
cmake/: FindGEOS.cmake  FindYAP.cmake
