CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( YAP_GEOS C )

SET ( YAP_GEOS_VERSION 0.1)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(YAP REQUIRED)
IF (NOT YAP_FOUND)
  MESSAGE (SEND_ERROR "YAP was not found!")
ENDIF (NOT YAP_FOUND)

FIND_PACKAGE(GEOS REQUIRED)
IF (NOT GEOS_FOUND)
  MESSAGE (SEND_ERROR "GEOS dependency was not found!")
ENDIF (NOT GEOS_FOUND)

INCLUDE_DIRECTORIES(
     ${YAP_INCLUDE_DIR}
     ${GEOS_INCLUDE_DIR}
     ${CMAKE_CURRENT_BINARY_DIR}
     .
)

SET ( SOURCES
  geometry_to_term.c 
  term_to_geometry.c
  yap.c
  geos_yap.c 
  )

ADD_LIBRARY(geos_yap SHARED ${SOURCES})
TARGET_LINK_LIBRARIES(geos_yap
  ${GEOS_LIBRARY}
)

INSTALL(TARGETS geos_yap DESTINATION ${YAP_PL_LIBRARY_DIR})
INSTALL(FILES geos.yap DESTINATION ${YAP_PL_LIBRARY_DIR})
